HW5SERVER/tests/output/t17.out
lli: tmp.ll:35:9: error: '%t1' defined with type 'i1' but expected 'i32'
ret i32 %t1
        ^
